--- a/test.html
+++ b/test.html
@@ -17,9 +17,9 @@
     <h2>Fun With Text!</h2>
 
     <!-- Change text color -->
-    <p style="color:red">This text is red.</p>
+    <p style="color:orange">This text is red.</p>
     <p style="color:blue">This text is blue.</p>
-    <p style="color:green">This text is green.</p>
+    <p style="color:red">This text is green.</p>
 
     <!-- Change font-size -->
     <p style="font-size: 48px;">This text is BIG!</p>
